<resources>
    <string name="app_name">pratilipi</string>
    <string name="home">Home</string>
    <string name="newpost">New Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_and_post">Upload And Post</string>
    <string name="add_image">Add Image</string>
    <string name="new_post">New Post</string>
    <string name="write_something_about_your_post_here">Write something about your post here.</string>
    <string name="title">Title</string>

    <string name="are_you_sure_you_want_to_quit">Are you sure you want to quit?</string>
    <string name="take_me_back">Take Me Back</string>
    <string name="quit_app">Quit App</string>
    <string name="are_you_sure_you_want_to_delete_the_post">Are you sure you want to delete the post?</string>
    <string name="delete">Delete</string>
    <string name="go_back">Go Back</string>
    <string name="edit_post">Edit Post</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="write_title_here">write title here</string>
</resources>