<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditContentBottomSheetDialogFragment">

    <RelativeLayout
        android:id="@+id/hsv"
        android:layout_above="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="80dp"
            android:paddingTop="10dp"
            android:paddingEnd="80dp"
            android:paddingBottom="10dp"
            android:src="@drawable/dash" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dash">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/edit_post"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:textSize="24sp"
                    android:paddingStart="18dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:text="@string/title"
                    android:textColor="#d0021b"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <EditText
                    android:id="@+id/titleET"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:hint="@string/title"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <TextView
                    android:textSize="24sp"
                    android:paddingStart="18dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:text="@string/description"
                    android:textColor="#d0021b"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <EditText
                    android:id="@+id/contentET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/write_something_about_your_post_here"
                    android:maxLines="10"
                    android:padding="10dp"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/imageUpload"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_back_image"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/image" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:fontFamily="monospace"
                                android:gravity="center"
                                android:text="@string/add_image"
                                android:textAlignment="gravity"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMedia"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/mediaView"
                    android:visibility="gone"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp"
                        app:strokeColor="#d0021b"
                        app:strokeWidth="3dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:alpha="0.4"
                                android:background="#80000000"
                                android:padding="2dp"
                                android:scaleType="fitXY" />
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <ImageButton
                        android:id="@+id/delete"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="6dp"
                        android:background="@drawable/circle_bg"
                        android:elevation="8dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_close"
                        app:tint="#d0021b" />

                </RelativeLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/postButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_back_upload"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:padding="12dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textAlignment="gravity"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>